# relay

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  devenv.nix
.github/workflows/: release.yml
assets/: main.css
src/: layouts.rs  main.rs  routes.rs  utilities.rs
src/components/: mod.rs  notification.rs
src/components/alert_dialog/: component.rs
src/components/avatar/: component.rs
src/components/badge/: component.rs
src/components/card/: component.rs  style.css
src/components/dialog/: component.rs
src/components/dropdown_menu/: component.rs
src/components/go_back/: component.rs
src/components/header/: component.rs  styles.css
src/components/input/: style.css
src/components/spinner/: component.rs  style.css
src/components/tooltip/: component.rs
src/custom_types/: rooms.rs
src/layouts/encryption/: component.rs  style.css
src/layouts/notifications/: component.rs  style.css
src/layouts/sidebar/: component.rs  style.css
src/routes/: home.rs  mod.rs  room.rs  router.rs
src/routes/home/: components.css  components.rs  dm_utilities.rs  page.css  page.rs
src/routes/login/: component.rs  style.css
src/routes/profile/: component.rs
src/routes/room/: components.css  components.rs  mod.rs  page.css  page.rs  settings.rs  timeline_utilities.rs
src/routes/room/components/: chat_bubble.css  chat_bubble.rs  header.css  header.rs  message_input.css  message_input.rs  read_receipt.rs  room_timeline.css  room_timeline.rs
src/routes/room/message_types/: image.css  image.rs  video.css  video.rs
src/routes/room/settings/: components.rs  page.css  page.rs
src/routes/room/settings/components/: leave_room.rs  name_image.css  name_image.rs  participants.css  participants.rs
src/routes/settings/: component.rs  components.rs  page.css  page.rs
src/routes/settings/components/: account.css  account.rs  profile.css  profile.rs
src/routes/space/: components.rs  page.rs
src/routes/space/components/: header.css  header.rs  room_list.css  room_list.rs
src/services/matrix/: client_manager.rs  mod.rs  storage.rs
src/state/: app_state.rs  mod.rs  notifications.rs  secure_state.rs
src/utilities/: media.rs  room.rs
