[package]
name = "Relay"
version = "0.1.0"
authors = ["gerardPolloRebozado <gerardit4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-i18n = "0.5.1"
matrix-sdk = { version = "0.17.0", features = ["e2e-encryption", "sqlite", "bundled-sqlite"] }
serde = "1.0.228"
serde_json = "1.0.138"
tokio = { version = "1.52.3", features = ["full"] }
sysdirs = "0.9.4"
matrix-sdk-sqlite = { version = "0.17.0", features = ["bundled"] }
env_logger = "0.11.6"
log = "0.4.29"
rand = "0.9.4"
hex = "0.4.3"
keyring-core = "1.0"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
uuid = { version = "1.23.1", features = ["v4"] }
dioxus-icons = { version = "0.1.0", default-features = false }
base64 = "0.22.1"
matrix-sdk-ui = "0.17.0"
futures-util = "0.3.32"
chrono = "0.4.44"


[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
